try using break all to avoid overflow

--- a/css/both.css
+++ b/css/both.css
@@ -8,6 +8,10 @@ body{
 	position: static;
 }
 
+body div{
+	word-break; break-all;
+}
+
 a:link {
     color: #47b2dc;
 }
@@ -308,7 +312,6 @@ body {
 	display: block; 
 	width: 100%;
 	overflow: hidden;
-	background-color: blue;
 }
 
 .recomImg{
